--- a/build.yaml
+++ b/build.yaml
@@ -22,3 +22,14 @@ include:
   - board: piantor_pro_bt_right
     shield: settings_reset
     snippet: studio-rpc-usb-uart
+
+  - board: seeeduino_xiao_ble
+    shield: corne_dongle_xiao
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Xiao_Dongle\" -DCONFIG_ZMK_STUDIO=y
+    artifact-name: xiao_corne_dongle
+    snippet: studio-rpc-usb-uart
+  - board: seeeduino_xiao_ble
+    shield: corne_dongle_xiao dongle_display
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Xiao_Dongle_O\"
+    artifact-name: xiao_corne_dongle_oled
+    snippet: studio-rpc-usb-uart
